# IF2210_TB1_C0K

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
_src_old/: main.cpp  std.hpp
_src_old/class/command/: command.hpp
_src_old/class/game/: game.hpp
_src_old/class/gameobject/hewan/: hewan.hpp
_src_old/class/gameobject/item/: item.hpp
_src_old/class/gameobject/pemain/: pemain.hpp  peternak.hpp  walikota.hpp
_src_old/class/gameobject/produk/: produk.hpp
_src_old/class/muat/: config_reader.hpp
config/: misc.txt  recipe.txt
save/: data.txt  data2.txt  data5.txt  data6.txt  kosong.txt  sample_save.txt  tes.txt  tes_fulldata.txt  testing.txt
src/: Makefile  main.cpp  std.hpp
src/class/command/: command.cpp  command.hpp  commandException.hpp
src/class/file/: file_reader.cpp  file_reader.hpp
src/class/file/muat/: muat.cpp  muat.hpp  muatException.hpp
src/class/file/simpan/: simpan.cpp  simpan.hpp  simpanException.hpp
src/class/game/: game.cpp  game.hpp
src/class/game_object/item/: item.cpp  (+1 more)
src/class/muat/: config_reader.cpp  config_reader.hpp  config_readerException.hpp  file_reader.cpp  file_reader.hpp  file_readerException.hpp  muat.cpp  muat.hpp
src/class/simpan/: simpan.cpp  simpan.hpp  simpanException.hpp
src/class/util/: util.cpp  util.hpp  utilException.hpp
src/classes/command/: command.hpp
src/classes/config_reader/: config_reader.hpp
src/classes/hewan/: hewan.hpp
src/classes/pemain/: pemain.hpp  petani.hpp  peternak.hpp  walikota.hpp
src/classes/player/: player.hpp
src/classes/produk/: produk.hpp
(+38 files in other folders)
